--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^4.14.1",
+    "gatsby-plugin-ipfs": "^2.0.2",
     "gatsby-plugin-sass": "^5.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
