--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^4.14.1",
     "gatsby-plugin-ipfs": "^2.0.2",
+    "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-sass": "^5.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
